--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="contact.html" title="Other ways to contact me"><i class="fa fa-angle-double-right fa-3x"></i></a>
             </p>
             <p style="margin-bottom: 10px;"><a href="portfolio.html">Portfolio</a> / <a href="bio.html">Biography</a> / <a href="rocks.html">Rocks</a></p>
-            <small><a href="/ru">Русский</a> / <a href="https://github.com/dsrev/dsrev/tree/gh-pages" target="_blank">View source</a> / <a href="https://github.com/dsrev/dsrev/blob/gh-pages/privacy.md" target="_blank">Privacy Policy</a></small>
+            <small><a href="/ru">Русский</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages" target="_blank">View source</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages/privacy.md" target="_blank">Privacy Policy</a></small>
         </div>
     </div>
 </body>
