--- a/ru/index.html
+++ b/ru/index.html
@@ -17,7 +17,7 @@
             <p class="socials">
                 <a href="https://www.youtube.com/channel/UCmtyukqkSLBNMyvF2JBO0JQ" target="_blank" title="YouTube"><span class="fa fa-youtube-play fa-3x"></span></a>
                 <a href="https://t.me/IlyaProkopenko" target="_blank" title="Telegram"><span class="fa fa-telegram fa-3x"></span></a>
-                <a href="https://social.snopyta.org/@dsrev" rel="me" target="_blank" title="Mastodon"><span class="fa fa-mastodon fa-3x"></span></a>
+                <a href="https://mstdn.social/@dsrev" rel="me" target="_blank" title="Mastodon"><span class="fa fa-mastodon fa-3x"></span></a>
                 <a href="https://soundcloud.com/ilyaprokopenko" target="_blank" title="SoundCloud"><span class="fa fa-soundcloud fa-3x"></span></a>
                 <a href="https://github.com/dsrev" target="_blank" title="GitHub"><span class="fa fa-github fa-3x"></span></a>
                 <a href="https://codeberg.org/dsrev" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
