Global: Migrate to GitHub
Codeberg provides the Codeberg Pages service, and it's awesome!
However, it is far from perfect, and I would feel more comfortable
moving my site to GitHub.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="contact.html" title="Other ways to contact me"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
             <p style="margin-bottom: 10px;"><a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio" target="_blank">Biography</a> / <a href="rocks.html">Rocks</a></p>
-            <small><a href="/ru">Русский</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages" target="_blank">View source</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages/privacy.md" target="_blank">Privacy Policy</a></small>
+            <small><a href="/ru">Русский</a> / <a href="https://github.com/dsrev/dsrev/tree/pages" target="_blank">View source</a> / <a href="https://github.com/dsrev/dsrev/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
         </div>
     </div>
 </body>
