--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>404 Error</title>
     <link rel="stylesheet" href="/assets/main.css">
     <link rel="icon" href="/assets/favicon.png" sizes="32x32" type="image/png">
     <link rel="apple-touch-icon" href="/assets/apple-touch-icon.png" sizes="180x180" type="image/png">
