--- a/ru/index.html
+++ b/ru/index.html
@@ -25,7 +25,7 @@
                 <a href="contact.html" title="Другие способы связаться со мной"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
             <p style="margin-bottom: 10px;"><a href="portfolio.html">Портфолио</a> / <a href="https://t.me/s/dsrbio" target="_blank">Биография</a> / <a href="rocks.html">Всячина</a></p>
-            <small><a href="/">English</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages" target="_blank">Посмотреть исходный код</a> / <a href="https://codeberg.org/dsrev/dsrev/src/branch/pages/privacy.md" target="_blank"><abbr title="Без русского перевода. Если кратко - мне не наплевать на вашу приватность и я не использую CDN, Cloudflare и аналитику.">Privacy Policy</abbr></a></small>
+            <small><a href="/">English</a> / <a href="https://github.com/dsrev/dsrev/tree/pages" target="_blank">Посмотреть исходный код</a> / <a href="https://github.com/dsrev/dsrev/blob/pages/privacy.md" target="_blank"><abbr title="Без русского перевода. Если кратко - мне не наплевать на вашу приватность и я не использую CDN, Cloudflare и аналитику.">Privacy Policy</abbr></a></small>
         </div>
     </div>
 </body>
