Global: Add link to wiki

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <a href="https://codeberg.org/dsrev" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
                 <a href="contact.html" title="Other ways to contact me"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
-            <p style="margin-bottom: 10px;"><a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio" target="_blank">Biography</a> / <a href="rocks.html">Rocks</a></p>
+            <p style="margin-bottom: 10px;"><a href="https://wiki.dsrev.ru/">Wiki</a> / <a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio">Biography</a> / <a href="rocks.html">Rocks</a></p>
             <small><a href="/ru">Русский</a> / <a href="https://github.com/dsrev/dsrev/tree/pages" target="_blank">View source</a> / <a href="https://github.com/dsrev/dsrev/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
         </div>
     </div>
