--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
         <h1 id="contact">Contact</h1>
         <p>I'll leave the rest here that didn't make to the home page.</p>
         <h3 id="private">Contact privately</h3>
-        <p><b>E-mail:</b> dsrev [at] protonmail [dot] com</p>
+        <p><b>E-mail:</b> dsrev [at] proton [dot] me</p>
         <p><b><abbr title="Extensible Messaging and Presence Protocol (originally named Jabber)">XMPP</abbr>:</b> dsrev [at] snopyta [dot] org</p>
         <p><b>Telegram:</b> <a href="https://t.me/dsrev" target="_blank" class="link">@dsrev</a></p>
         <p><b>Matrix:</b> <a href="https://matrix.to/#/@dsrev:matrix.org" target="_blank" class="link">@dsrev:matrix.org</a></p>
