--- a/ru/contact.html
+++ b/ru/contact.html
@@ -14,7 +14,7 @@
         <h1>Контакты</h1>
         <p>Я оставлю здесь остальное, что не попало на главную страницу.</p>
         <h3>Связаться лично</h3>
-        <p><b>E-mail:</b> dsrev [at] protonmail [dot] com</p>
+        <p><b>E-mail:</b> dsrev [at] proton [dot] me</p>
         <p><b><abbr title="Расширяемый протокол обмена сообщениями и информацией о присутствии (ранее известный как Джаббер)">XMPP</abbr>:</b> dsrev [at] snopyta [dot] org</p>
         <p><b>Telegram:</b> <a href="https://t.me/dsrev" target="_blank" class="link">@dsrev</a></p>
         <p><b>Matrix:</b> <a href="https://matrix.to/#/@dsrev:matrix.org" target="_blank" class="link">@dsrev:matrix.org</a></p>
