Migrated to github.io
I had to do it

--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@
                 <a href="https://codeberg.org/dsrev" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
                 <a href="contact.html" title="Другие способы связаться со мной"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
-            <p style="margin-bottom: 10px;"><a href="https://wiki.dsrev.ru/">Вики</a> / <a href="portfolio.html">Портфолио</a> / <a href="https://t.me/s/dsrbio">Биография</a> / <a href="rocks.html">Всячина</a></p>
+            <p style="margin-bottom: 10px;"><a href="https://dsrev.github.io/wiki/">Вики</a> / <a href="portfolio.html">Портфолио</a> / <a href="https://t.me/s/dsrbio">Биография</a> / <a href="rocks.html">Всячина</a></p>
             <small><a href="/">English</a> / <a href="https://github.com/dsrev/dsrev/tree/pages" target="_blank">Посмотреть исходный код</a> / <a href="https://github.com/dsrev/dsrev/blob/pages/privacy.md" target="_blank"><abbr title="Без русского перевода. Если кратко - мне не наплевать на вашу приватность и я не использую CDN, Cloudflare и аналитику.">Privacy Policy</abbr></a></small>
         </div>
     </div>
