--- a/ru/contact.html
+++ b/ru/contact.html
@@ -16,7 +16,7 @@
         <h3>Связаться лично</h3>
         <p><b>E-mail:</b> dsrev [at] proton [dot] me</p>
         <p><b><abbr title="Расширяемый протокол обмена сообщениями и информацией о присутствии (ранее известный как Джаббер)">XMPP</abbr>:</b> dsrev [at] snopyta [dot] org</p>
-        <p><b>Telegram:</b> <a href="https://t.me/dsrev" target="_blank" class="link">@dsrev</a></p>
+        <p><b>Telegram:</b> <a href="https://t.me/holoniix" target="_blank" class="link">@holoniix</a></p>
         <p><b>Matrix:</b> <a href="https://matrix.to/#/@dsrev:matrix.org" target="_blank" class="link">@dsrev:matrix.org</a></p>
         <h3>Социальные сети</h3>
         <p><b>Reddit:</b> <a href="https://reddit.com/u/xorg-xinit/" target="_blank" class="link">/u/xorg-xinit</a></p>
@@ -30,7 +30,7 @@
             <li><b><a href="https://t.me/openvk" target="_blank" class="link">OpenVK</a></b> - коллаборационный проект, в котором я участвую.</li>
         </ul>
         <p><b>Odysee:</b> <a href="https://odysee.com/@dsrev" target="_blank" class="link">@dsrev</a> (будут видео, когда я начну делать видео на английском).</p>
-        <p><b>Steam:</b> <a href="https://steamcommunity.com/id/cyanreg" target="_blank" class="link">https://steamcommunity.com/id/cyanreg</a> и <a href="https://steamcommunity.com/id/dsrev" target="_blank" class="link">https://steamcommunity.com/id/dsrev</a></p>
+        <p><b>Steam:</b> <a href="https://steamcommunity.com/id/holoniix" target="_blank" class="link">https://steamcommunity.com/id/holoniix</a>, <a href="https://steamcommunity.com/id/cyanreg" target="_blank" class="link">https://steamcommunity.com/id/cyanreg</a> и <a href="https://steamcommunity.com/id/dsrev" target="_blank" class="link">https://steamcommunity.com/id/dsrev</a></p>
         <a href="/ru" ondragstart="return false;" title="Назад"><img class="logo" src="/assets/logo.svg" alt="IP's logo"></a>
     </div>
 </body>
