--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="contact.html" title="Other ways to contact me"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
             <p style="margin-bottom: 10px;"><a href="https://holoniix.github.io/wiki/">Wiki</a> / <a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio">Biography</a> / <a href="rocks.html">Rocks</a></p>
-            <small><a href="/ru">Русский</a> / <a href="https://github.com/Holoniix/holoniix.github.io" target="_blank">View source</a> / <a href="https://github.com/Holoniix/holoniix.github.io/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
+            <small><a href="/ru">Русский</a> / <a href="https://github.com/Holoniix/ilyap.ru" target="_blank">View source</a> / <a href="https://github.com/Holoniix/ilyap.ru/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
         </div>
     </div>
 </body>
