--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <div class="content">
             <img class="logo-big" ondragstart="return false;" src="assets/logo_full.svg" alt="IP's logo">
             <p class="socials">
-                <a href="https://www.youtube.com/channel/UCwPpvBTw0a-gE0gydqMNLXA" target="_blank" title="YouTube"><span class="fa fa-youtube-play fa-3x"></span></a>
+                <a href="https://www.youtube.com/channel/UCmtyukqkSLBNMyvF2JBO0JQ" target="_blank" title="YouTube"><span class="fa fa-youtube-play fa-3x"></span></a>
                 <a href="https://t.me/IlyaProkopenko" target="_blank" title="Telegram"><span class="fa fa-telegram fa-3x"></span></a>
                 <a href="https://mstdn.social/@dsrev" rel="me" target="_blank" title="Mastodon"><span class="fa fa-mastodon fa-3x"></span></a>
-                <a href="https://twitter.com/holoniix" target="_blank" title="Twitter"><span class="fa fa-twitter fa-3x"></span></a>
+                <a href="https://twitter.com/dsrev_" target="_blank" title="Twitter"><span class="fa fa-twitter fa-3x"></span></a>
                 <a href="https://pixelfed.social/dsrev" target="_blank" title="Pixelfed"><span class="fa fa-pixelfed fa-3x"></span></a>
-                <a href="https://soundcloud.com/holoniix" target="_blank" title="SoundCloud"><span class="fa fa-soundcloud fa-3x"></span></a>
-                <a href="https://github.com/Holoniix" target="_blank" title="GitHub"><span class="fa fa-github fa-3x"></span></a>
-                <a href="https://codeberg.org/holoniix" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
+                <a href="https://soundcloud.com/ilyaprokopenko" target="_blank" title="SoundCloud"><span class="fa fa-soundcloud fa-3x"></span></a>
+                <a href="https://github.com/dsrev" target="_blank" title="GitHub"><span class="fa fa-github fa-3x"></span></a>
+                <a href="https://codeberg.org/dsrev" target="_blank" title="Codeberg"><span class="fa fa-codeberg fa-3x"></span></a>
                 <a href="contact.html" title="Other ways to contact me"><span class="fa fa-angle-double-right fa-3x"></span></a>
             </p>
-            <p style="margin-bottom: 10px;"><a href="https://holoniix.github.io/wiki/">Wiki</a> / <a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio">Biography</a> / <a href="rocks.html">Rocks</a></p>
-            <small><a href="/ru">Русский</a> / <a href="https://github.com/Holoniix/ilyap.ru" target="_blank">View source</a> / <a href="https://github.com/Holoniix/ilyap.ru/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
+            <p style="margin-bottom: 10px;"><a href="https://dsrev.github.io/wiki/">Wiki</a> / <a href="portfolio.html">Portfolio</a> / <a href="https://t.me/s/dsrbio">Biography</a> / <a href="rocks.html">Rocks</a></p>
+            <small><a href="/ru">Русский</a> / <a href="https://github.com/dsrev/ilyap.ru" target="_blank">View source</a> / <a href="https://github.com/dsrev/ilyap.ru/blob/pages/privacy.md" target="_blank">Privacy Policy</a></small>
         </div>
     </div>
 </body>
